--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -8,9 +8,9 @@
     "landingpage": {
         "create_room":"Erzeuge Raum",
         "longwave": "Longwave",
-        "adaption": "ist eine Online in Realzeit laufende Adaption des Spiels",
+        "adaptation": "ist eine Online in Realzeit laufende Adaption des Spiels",
         "wavelength": "Wavelength",
-        "fun": "Macht per Sprach-Chat am meisten Spass!"
+        "best_enjoyewd": "Macht per Sprach-Chat am meisten Spass!"
     },
     "roomidheader": {
         "roomid": "Raum ID:",
@@ -30,7 +30,9 @@
     },
     "counterguess": {
         "more_left": "Ziel ist weiter links",
-        "more_right": "Ziel ist weiter rechts"
+        "more_right": "Ziel ist weiter rechts",
+        "players_clue": "{{givername}}'s Hinweis",
+        "waiting_guess_team": "Warte auf den Rateversuche links/rechts von Team {{guessteam}}..."
     },
     "giveclue": {
         "waiting_for_clue": "Warte auf den Hinweis von {{givername}}",
