--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "commonfooter": {
-        "developed_by": "was developed by Wolfgang Warsch, Alex Hague and Justin Vickers.",
+        "developed_by": "is designed by Wolfgang Warsch, Alex Hague and Justin Vickers.",
         "adapted_for_web": "Adapted for web",
         "adapted_for_web_by": "by Evan Bailey and Margarethe Schoen.",
         "support_patreon": "Support us on Patreon!"
@@ -8,9 +8,9 @@
     "landingpage": {
         "create_room":"Create Room",
         "longwave": "Longwave",
-        "adaption": "is a online and real-time adaption of the game",
+        "adaptation": "is a online, real-time adaptation of the board game",
         "wavelength": "Wavelength",
-        "fun": "Make most fun via voice chat!"
+        "best_enjoyewd": "Best enjoyed with voice chat!"
     },
     "roomidheader": {
         "roomid": "Room ID:",
@@ -18,7 +18,7 @@
     },
     "spectrum": {
         "guessing": "Guessing...",
-        "goal": "Goal"
+        "goal": "Target"
     },
     "title": {
         "longwave": "Longwave"
@@ -29,66 +29,68 @@
         "the_player": "THE PLAYER"
     },
     "counterguess": {
-        "more_left": "Goal is at the left side",
-        "more_right": "Goal is at the right side"
+        "more_left": "Target is to the left",
+        "more_right": "Target is to the right",
+        "players_clue": "{{givername}'s clue",
+        "waiting_guess_team": "Waiting for {{guessteam}} to guess left/right..."
     },
     "giveclue": {
-        "waiting_for_clue": "Waiting for {{givername}} to give clue...",
-        "draw_other_hand": "Draw other hand",
+        "waiting_for_clue": "Waiting for {{givername}} to provide a clue...",
+        "draw_other_hand": "Draw a different card",
         "clue": "Clue...",
-        "instructions": "Dein Hinweis sollte sich im Spektrum zwischen den beiden Begriffe befinden und ungefähr die Position des vorgegeben Ziels zwischen diesen beiden Extremen liegen. Zum Beispiel kann 'Kaffee' ein guter Hinweis für ein warmes oder hei0es Getränk auf dem Spektrum 'heiß' und 'kalt' sein.",
-        "focus1": "Beschreibe einen einzelnen Gedanken",
-        "focus2": "Focus to the topic",
+        "instructions": "Your clue should be some concept that lies on the provided spectrum, conceptionally wehre the target is between the two extremes. For example, 'coffe' might be a good clue that lies on a spectrum of 'hot' and 'cold'.",
+        "focus1": "Convey a single thought",
+        "focus2": "Stay on topic",
         "focus3": "No numbers allowed",
         "focus4": "Be creative!",
-        "give_clue": "Give clue"
+        "give_clue": "Submit clue"
     },
     "inputname": {
-        "your_name": "Your name"
+        "your_name": "Enter your name"
     },
     "jointeam": {
-        "join_team": "Join team",
+        "join_team": "Join Team",
         "join_left": "Join",
         "join_right": "Join",
         "start_game": "Start game"
     },
     "makeguess": {
         "players_clue": "{{givername}}'s clue",
-        "waiting_guessing_team": "Warte auf den Rateversuch von Team {{guessingteam}}...",
-        "invite_other_players": "Invite other players to this game.",
-        "share_game_url": "Share this address with them: {{game_url}}",
-        "guess_for_team": "Guess for team {{teamname}}"
+        "waiting_guessing_team": "Waiting for {{guessingteam}} to guess...",
+        "invite_other_players": "Invite other players to join the game.",
+        "share_game_url": "Share this URL with them: {{game_url}}",
+        "guess_for_team": "Submit Guess for {{teamname}}"
     },
     "previousturnresult": {
-        "previous_game": "Previous game",
+        "previous_game": "Previous Turn",
         "player_clue": "{{givername}}'s clue"
     },
     "scoreboard": {
         "free_play":"Free Play",
         "last_card": "Last Card!",
         "card_remaining": "Cards remaining",
-        "coop_score": "Coop score",
+        "coop_score": "Cooperative Score",
         "points": "POINTS"
     },
     "setupgame": {
-        "standard_game": "Standard (Teams): 4+ player",
-        "coop_game": "Coop Mode: 2+ player",
-        "free_game": "Free Play: 2+ player"
+        "standard_game": "Standard (Teams): 4+ Players",
+        "coop_game": "Cooperative: 2+ Players",
+        "free_game": "Free Play: 2+ Players"
     },
     "viewscore": {
         "player_clue": "{{givername}}'s clue",
         "winning_team": "{{winnerteam}} wins!",
-        "1_point_correct_guess": "1 point for right direction guess.",
-        "0_point_wrong_guess": "0 points for wrong direction guess.",
-        "bonus_turn": "Your team got a <strong>bonus turn</strong>",
+        "1_point_correct_guess": "1 point for theeir correct counter guess.",
+        "0_point_wrong_guess": "0 points for their counter guess.",
+        "bonus_turn": "Your team earned a <strong>bonus turn!</strong>",
         "reset_game": "Reset game",
-        "game_finished": "End game",
-        "final_score_team": "Final score of your team",
+        "game_finished": "Game complete",
+        "final_score_team": "Your team's foínal cooperative score",
         "points": "POINTS",
-        "catching_up": "Catch up activated: {{scoringteam}} got a bonus turn!",
-        "catching_up_info": "Nachdem Dein team einen 4-Punkte Zug erreicht hat, erhält das Team einen weiteren Zug, sollte es weiterhin hinter dem anderem Team liegen.",
-        "draw_next_card": "Draw next spectrum card",
+        "catching_up": "Catchup activated: {{scoringteam}} takes a bonus turn!",
+        "catching_up_info": "After a team scores a four-point round, they get a bonus turn if they are still behind the other team",
+        "draw_next_card": "Draw next Spectrum Card",
         "score": "Score",
-        "got": "got"
+        "got": "gets"
     }
 }
