--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -10,7 +10,7 @@
         "longwave": "Longwave",
         "adaptation": "ist eine Online in Realzeit laufende Adaption des Spiels",
         "wavelength": "Wavelength",
-        "best_enjoyewd": "Macht per Sprach-Chat am meisten Spass!"
+        "best_enjoyed": "Macht per Sprach-Chat am meisten Spass!"
     },
     "roomidheader": {
         "roomid": "Raum ID:",
