--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,7 +10,7 @@
         "longwave": "Longwave",
         "adaptation": "is a online, real-time adaptation of the board game",
         "wavelength": "Wavelength",
-        "best_enjoyewd": "Best enjoyed with voice chat!"
+        "best_enjoyed": "Best enjoyed with voice chat!"
     },
     "roomidheader": {
         "roomid": "Room ID:",
