--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -18,7 +18,7 @@
     },
     "spectrum": {
         "guessing": "Raten...",
-        "goal": "Ziel"
+        "target": "Ziel"
     },
     "title": {
         "longwave": "Longwave"
