--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,7 +18,7 @@
     },
     "spectrum": {
         "guessing": "Guessing...",
-        "goal": "Target"
+        "target": "Target"
     },
     "title": {
         "longwave": "Longwave"
