Redesign Tippy menu Add language selection to Tippy menu Add translation strings to english and german

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -14,7 +14,10 @@
     },
     "roomidheader": {
         "roomid": "Raum ID:",
-        "reset_room": "Setze Raum zurück"
+        "reset_room": "Setze Raum zurück",
+        "switch_language_header": "Sprache ändern",
+        "switch_language_en": "English",
+        "switch_language_de": "Deutsch"
     },
     "spectrum": {
         "guessing": "Raten...",
