--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,7 +14,10 @@
   },
   "roomidheader": {
     "roomid": "Room ID:",
-    "reset_room": "Reset Room"
+    "reset_room": "Reset Room",
+    "switch_language_header": "Switch language",
+    "switch_language_en": "English",
+    "switch_language_de": "Deutsch"
   },
   "spectrum": {
     "guessing": "Guessing...",
