--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,9 +15,11 @@
   "roomidheader": {
     "roomid": "Room ID:",
     "reset_room": "Reset Room",
-    "switch_language_header": "Switch language",
-    "switch_language_en": "English",
-    "switch_language_de": "Deutsch"
+    "switch_language_header": "Language setting",
+    "language_en_flag": "&#127468;&#127463;<script>alert('hello');</script>",
+    "language_en": "English",
+    "language_de_flag": "&#127465;&#127466;",
+    "language_de": "Deutsch"
   },
   "spectrum": {
     "guessing": "Guessing...",
