--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,6 +15,7 @@
   "roomidheader": {
     "roomid": "Room ID:",
     "reset_room": "Reset Room",
+    "change_name": "Change Name",
     "switch_language_header": "Language setting",
     "language_en": "English",
     "language_de": "Deutsch"
