Translate game type and fix typo

--- a/public/locales/it/spectrum-cards.json
+++ b/public/locales/it/spectrum-cards.json
@@ -54,7 +54,7 @@
     ["Tradizionalmente maschile", "Tradizionalmente femminile"],
     ["Parte del corpo inutile", "Parte del corpo utile"],
     ["Moda", "Classico"],
-    ["Debole", "forte"],
+    ["Debole", "Forte"],
     ["Cereali disgustosi", "Cereali deliziosi"],
     ["Cattivo", "Buono"],
     ["Non crea dipendenza", "Crea dipendenza"],
