AVG&AI update, css

--- a/public/locales/thema-AVG&AI/spectrum-cards.json
+++ b/public/locales/thema-AVG&AI/spectrum-cards.json
@@ -2,7 +2,7 @@
   "basic": [
               ["Gesloten", "Open"],
               ["Dataminimalisatie", "Onbeperkte dataverzameling"],
-              ["Transparantie", "Geen transparantie"],
+              ["Transparantie", "Misleiding"],
               ["Beperkte bewaartermijnen", "Oneindige dataretentie"],
               ["Vrijwillige, geïnformeerde toestemming", "Verplichte toestemming zonder keuze"],
               ["Recht op inzage", "Gebruiker onbekend met gegevensgebruik"],
@@ -28,36 +28,23 @@
               ["Beperkingen voor overheidstoegang tot data", "Volledige overheidscontrole"],
               ["Beperkingen op commercieel gebruik van persoonsgegevens", "Onbeperkte data-handel"],
               ["Verantwoordelijkheden voor dataverwerkers", "Geen verantwoordelijkheid voor dataverwerkers"],
-              ["Afstemming van bedrijfspraktijken aan privacyregels", "Volledige bedrijfsvrijheid"]
-],
+              ["Afstemming van bedrijfspraktijken aan privacyregels", "Volledige bedrijfsvrijheid"],
+              ["Beperkte toegang tot eigen persoonsgegevens", "Volledige toegang tot eigen persoonsgegevens"],
+              ["Gebruik van gegevens voor niet gespecificeerde doeleinden", "Gebruik van gegevens alleen voor gespecificeerde doeleinden"],
+              ["Geen meldplicht bij datalekken", "Verplichte melding van datalekken"],
+              ["Geautomatiseerde besluitvorming zonder bezwaar", "Recht op menselijke tussenkomst bij geautomatiseerde besluitvorming"],
+              ["Verzamelen van excessieve persoonsgegevens", "Verzamelen van alleen noodzakelijke persoonsgegevens"],
+              ["Ontbreken van verantwoording door data verwerkers", "Verantwoordingsplicht voor data verwerkers"] 
+            ],
 "advanced": [
               ["Risicobeheerste AI-implementatie", "Ongecontroleerde AI-uitrol"],
               ["Transparante AI-systemen", "Black-box AI-systemen"],
-              ["AI met menselijke supervisie", "Autonome AI zonder toezicht"],
-              ["AI die de privacy respecteert", "AI die privacy schendt"],
+              ["AI met menselijke supervisie", "Autonome AI zonder human-in-the-loop"],
               ["Discriminatievoorkomende AI", "Discriminerende AI"],
               ["Beveiligde AI-systemen", "Onveilige AI-infrastructuren"],
               ["Ethisch verantwoorde AI", "Onethisch gebruik van AI"],
-              ["Verantwoordelijk AI-ontwerp", "Onverantwoordelijk AI-gebruik"],
-              ["AI met rechtsbescherming voor gebruikers", "AI zonder beschermingsmaatregelen"],
-              ["Duurzame AI-ontwikkeling", "Niet-duurzame AI-praktijken"],
-              ["AI die menselijk welzijn bevordert", "AI die schadelijk is voor menselijk welzijn"],
-              ["High-risk AI strikt gereguleerd", "High-risk AI losjes gereguleerd"],
-              ["AI in dienst van het publieke belang", "AI gebruikt tegen publiek belang"],
-              ["AI met betrokkenheid van belanghebbenden", "AI ontwikkeld zonder stakeholder input"],
-              ["Gebalanceerde AI-innovatie", "Ontwrichtende AI-innovatie"],
-              ["AI die bijdraagt aan gelijkheid", "AI die ongelijkheden verergert"],
-              ["AI met toegankelijke interfaces", "AI met niet-toegankelijke interfaces"],
-              ["AI die rekening houdt met gebruikersvariabiliteit", "One-size-fits-all AI"],
-              ["AI met menselijke waarden", "AI die menselijke waarden negeert"],
-              ["AI met wettelijke verantwoordingsplicht", "AI zonder verantwoordingsplicht"],
-              ["AI die transparantie in besluitvorming bevordert", "AI die besluitvorming versluiert"],
-              ["AI die duurzame ontwikkelingsdoelen ondersteunt", "AI die niet bijdraagt aan duurzame ontwikkeling"],
               ["Mensgerichte AI", "Technologisch deterministische AI"],
               ["AI met effectieve mens-machine samenwerking", "AI die menselijke inbreng limiteert"],
-              ["AI gestuurd door duidelijke ethische kaders", "AI zonder ethische leidraden"],
-              ["AI die kan worden gecontroleerd", "AI die oncontroleerbaar is"],
-              ["AI ontworpen voor inclusiviteit", "Exclusieve AI-systemen"],
               ["AI toegepast met respect voor mensenrechten", "AI toegepast met minachting voor mensenrechten"],
               ["AI die duidelijke gebruiksgrenzen heeft", "AI met vage of onbestaande grenzen"],
               ["Regulerende AI-wetgeving", "Deregulering of gebrek aan wetgeving voor AI"]
