Update AVG cards

--- a/public/locales/thema-AVG&AI/spectrum-cards.json
+++ b/public/locales/thema-AVG&AI/spectrum-cards.json
@@ -1,32 +1,31 @@
 {
   "basic": [
               ["Gesloten", "Open"],
-              ["Dataminimalisatie", "Onbeperkte dataverzameling"],
+              ["Dataminimalisatie", "Onbeperkte datahonger"],
               ["Transparantie", "Misleiding"],
-              ["Beperkte bewaartermijnen", "Oneindige dataretentie"],
+              ["Gegevens zijn al gewist", "Bewaartermijn is onbeperkt"],
               ["Vrijwillige, geïnformeerde toestemming", "Verplichte toestemming zonder keuze"],
               ["Recht op inzage", "Gebruiker onbekend met gegevensgebruik"],
-              ["Beperking van data-overdracht", "Delen van data zonder grenzen"],
+              ["Geen doorgifte", "Delen van persoonsgegevens zonder grenzen"],
               ["Doelbinding", "Willekeurige verwerking"],
               ["Strenge eisen aan gegevensbeveiliging", "Afwezigheid van beveiligingsmaatregelen"],
               ["Het recht om je onbespied te wanen", "Constante surveillance"],
               ["Datalek gemeld en afgehandeld", "Verborgen datalek"],
               ["Bijzondere categorieën van persoonsgegevens", "Normale persoonsgegevens"],
               ["Bescherming tegen automatische besluitvorming", "Automatische besluitvorming zonder rechtenbescherming"],
-              ["Beperkingen op profilering", "Onbeperkte profilering"],
+              ["Nooit profileren", "Onbeperkt profileren"],
               ["Uitgebreide rechten voor betrokkenen", "Geen rechten voor betrokkenen"],
               ["Opt-out", "Opt-in"],
               ["Verantwoordelijkheid bij de verwerkingsverantwoordelijke", "Verantwoordelijkheid bij individu"],
               ["Stevige boetes bij AVG schendingen", "Geen sancties bij overtredingen"],
               ["Recht op data portabiliteit", "Geen data portabiliteit"],
               ["Extra bescherming van kindergegevens", "Onbeperkte verwerking van kindergegevens"],
-              ["Beperkende profileringseisen", "Ongecontroleerde profilering"],
+              ["Strenge profileringseisen", "Ongecontroleerde profilering"],
               ["Gecontroleerde toegang en overdracht", "Vrije toegang door derden"],
               ["Effectief toezicht", "Afwezigheid van een toezichthouder"],
               ["Plicht tot risicobeoordeling (DPIA)", "Geen preventieve maatregelen"],
               ["Verbod op misleidend verzamelen van gegevens", "Misleiding bij gegevensverzameling"],
-              ["Beperkingen voor overheidstoegang tot data", "Volledige overheidscontrole"],
-              ["Beperkingen op commercieel gebruik van persoonsgegevens", "Onbeperkte data-handel"],
+              ["Geen commercieel gebruik van persoonsgegevens", "Onbeperkte data-handel"],
               ["Verantwoordelijkheden voor dataverwerkers", "Geen verantwoordelijkheid voor dataverwerkers"],
               ["Afstemming van bedrijfspraktijken aan privacyregels", "Volledige bedrijfsvrijheid"],
               ["Beperkte toegang tot eigen persoonsgegevens", "Volledige toegang tot eigen persoonsgegevens"],
