--- a/public/locales/nl-data-protection/spectrum-cards.json
+++ b/public/locales/nl-data-protection/spectrum-cards.json
@@ -57,8 +57,7 @@
               ["Discriminatievoorkomende AI", "Discriminerende AI"],
               ["Beveiligde AI-systemen", "Onveilige AI-infrastructuren"],
               ["Ethisch verantwoorde AI", "Onethisch gebruik van AI"],
-              ["Mensgerichte AI", "Technologisch deterministische AI"],
-              
+              ["Mensgerichte AI", "Technologisch deterministische AI"]
             ],
 "advanced": [
               ["AI met effectieve mens-machine samenwerking", "AI die menselijke inbreng limiteert"],
