--- a/public/locales/nl-dataprotection/spectrum-cards.json
+++ b/public/locales/nl-dataprotection/spectrum-cards.json
@@ -1,258 +1,68 @@
 {
   "basic": [
-    ["Pessimo attore", "Ottimo attore"],
-    ["Basic", "Hipster"],
-    ["Inutile", "Inestimabile"],
-    ["Natura", "Cultura"],
-    ["Succede lentamente", "Succede all'improvviso"],
-    ["Lavoro", "Carriera"],
-    ["Rotondo", "A punta"],
-    ["La prova che Dio esiste", "La prova che Dio non esiste"],
-    ["Amato", "Odiato"],
-    ["Il lato chiaro della Forza", "Il lato oscuro della Forza"],
-    ["Stupido", "Geniale"],
-    ["Artigianale", "Industriale"],
-    ["Nessuno lo fa", "Lo fanno tutti"],
-    ["Di breve durata", "Di lunga durata"],
-    ["Lavoro pericoloso", "Lavoro sicuro"],
-    ["Fantasy", "Fantascienza"],
-    ["Semplice", "Fantastico"],
-    ["Ha una cattiva reputazione", "Ha una buona reputazione"],
-    ["Etico da mangiare", "Non etico da mangiare"],
-    ["Movie", "Film"],
-    ["Fuori moda", "Alla moda"],
-    ["Combattente per la libertà", "Terrorista"],
-    ["Superpotere cattivo", "Superpotere buono"],
-    ["Inefficace", "Efficace"],
-    ["Meglio caldo", "Meglio freddo"],
-    ["Quadrato", "Rotondo"],
-    ["Temporanea", "Permanente"],
-    ["Sembra una persona", "Non sembra una persona"],
-    ["Uncool", "Cool"],
-    ["La persona vivente peggiore", "La persona vivente migliore"],
-    ["Sottovalutato", "Sopravvalutato"],
-    ["Cibo spazzatura", "Cibo sano"],
-    ["Imperdonabile", "Perdonabile"],
-    ["Fallimento", "Capolavoro"],
-    ["Innocuo", "Dannoso"],
-    ["Grifondoro", "Serpeverde"],
-    ["Antigienico", "Igienico"],
-    ["Cattiva musica", "Buona musica"],
-    ["Inutile", "Utile"],
-    ["Film che Godzilla rovinerebbe", "Film che Godzilla migliorerebbe"],
-    ["Non importante", "Importante"],
-    ["Facile da scrivere", "Difficile da scrivere"],
-    ["Vizio", "Virtù"],
-    ["Musicista sottovalutato", "Musicista sopravvalutato"],
-    ["Attività impopolare", "Attività popolare"],
-    ["Diviso", "Intero"],
-    ["Inaffidabile", "Affidabile"],
-    ["Facile da uccidere", "Difficile da uccidere"],
-    ["Instabile", "Stabile"],
-    ["Animale innocuo", "Animale pericoloso"],
-    ["Pogramma televisivo brutto", "Programma televisivo bello"],
-    ["Tradizionalmente maschile", "Tradizionalmente femminile"],
-    ["Parte del corpo inutile", "Parte del corpo utile"],
-    ["Moda", "Classico"],
-    ["Debole", "Forte"],
-    ["Cereali disgustosi", "Cereali deliziosi"],
-    ["Cattivo", "Buono"],
-    ["Non crea dipendenza", "Crea dipendenza"],
-    ["Inutile in caso di emergenza", "Utile in caso di emergenza"],
-    ["Per bambini", "Per adulti"],
-    ["Cattivo", "Eroe"],
-    ["Cosa da fare sottovalutata", "Cosa da fare sopravvalutata"],
-    ["Noioso", "Emozionante"],
-    ["Puzzolente in senso cattivo", "Puzzolente in senso buono"],
-    ["Impopolare", "Popolare"],
-    ["Amico", "Nemico"],
-    ["Invenzione inutile", "Invenzione utile"],
-    ["Liberale", "Conservatore"],
-    ["Caldo", "Freddo"],
-    ["Normale", "Strano"],
-    ["Incolore", "Colorato"],
-    ["Basso contenuto calorico", "Alto contenuto calorico"],
-    ["Argomento facile", "Argomento difficile"],
-    ["Sconosciuto", "Famoso"],
-    ["Raro", "Comune"],
-    ["Emoji poco sexy", "Emoji sexy"],
-    ["Economico", "Caro"],
-    ["Arma sottovalutata", "Arma sopravvalutata"],
-    ["Mi sento male", "Mi sento bene"],
-    ["Non essenziale", "Essenziale"],
-    ["Sporco", "Pulito"],
-    ["Richiede fortuna", "Richiede abilità"],
-    ["Senza sapore", "Saporito"],
-    ["Argomento noioso", "Argomento affascinante"],
-    ["Casual", "Formale"],
-    ["Sottopagato", "Sovrapagato"],
-    ["Asciutto", "Bagnato"],
-    ["Abilità sottovalutata", "Abilità sopravvalutata"],
-    ["Proibito", "Incoraggiato"],
-    ["Canzone triste", "Canzone felice"],
-    ["Fragile", "Durevole"],
-    ["Geek", "Dork"],
-    ["Bene", "Male"],
-    ["Il giorno peggiore dell'anno", "Il giorno migliore dell'anno"],
-    ["Cattiva abitudine", "Buona abitudine"],
-    ["Persona gatto", "Persona cane"],
-    ["Saggio", "Intelligente"],
-    ["Difficile da fare", "Facile da fare"],
-    ["Attività mentale", "Attività fisica"],
-    ["Argomento non controverso", "Argomento controverso"],
-    ["Piacere proibito", "Amare apertamente"],
-    ["Senza talento", "Con talento"],
-    ["Difficile da trovare", "Facile da trovare"],
-    ["Ugly Man", "Beautiful Man"],
-    ["Difficile da ricordare", "Facile da ricordare"],
-    ["Basso", "Alto"],
-    ["Non sano", "Sano"],
-    ["Uomo cattivo", "Uomo buono"],
-    ["Storicamente importante", "Storicamente irrilevante"],
-    ["Senza peli", "Peloso"],
-    ["Inflessibile", "Flessibile"],
-    ["Animale domestico normale", "Animale domestico esotico"],
-    ["Introverso", "Estroverso"],
-    ["Il libro era migliore", "Il film era migliore"],
-    ["Brutto film", "Buon film"],
-    ["Brutto", "Bello"],
-    ["Persona matura", "Persona immatura"],
-    ["Cosa sottovalutata da possedere", "Cosa sopravvalutata da possedere"],
-    ["Ordinario", "Straordinario"],
-    ["Difficile da pronunciare", "Facile da pronunciare"],
-    ["Fatto male", "Ben fatto"],
-    ["Non un panino", "Un panino"],
-    ["Pericoloso", "Sicuro"],
-    ["Culturalmente significativo", "Culturalmente insignificante"],
-    ["Facoltativo", "Obbligatorio"],
-    ["Lettera dell'alfabeto sottovalutata", "Lettera dell'alfabeto sopravvalutata"],
-    ["Bassa qualità", "Alta qualità"],
-    ["Animale poco sexy", "Animale sexy"],
-    ["Luogo tranquillo", "Luogo rumoroso"],
-    ["Commedia", "Drammatico"],
-    ["Bisogno", "Desiderio"],
-    ["Cibo secco", "Cibo umido"],
-    ["Sostituibile", "Insostituibile"],
-    ["Il peggior atleta di tutti i tempi", "Il più grande atleta di tutti i tempi"],
-    ["Non etico", "Etico"],
-    ["Hobby noioso", "Hobby interessante"],
-    ["Condimento per pizza pessimo", "Condimento per pizza buono"],
-    ["Distopia", "Utopia"],
-    ["Ruvido", "Liscio"],
-    ["Dannoso", "Buono"],
-    ["Pacifico", "guerriero"],
-    ["Film sottovalutato", "Film sopravvalutato"],
-    ["Ha un cattivo sapore", "Ha un buon sapore"],
-    ["Sport", "Gioco"],
-    ["Film triste", "Film felice"],
-    ["Perdita di tempo", "Buon uso del tempo"],
-    ["La compagnia meno malvagia", "La compagnia più malvagia"],
-    ["Spuntino", "Pasto"],
-    ["Incredibile", "Credibile"],
-    ["Trash", "Di classe"],
-    ["Ha un cattivo odore", "Ha un buon odore"],
-    ["Star Wars", "Star Trek"],
-    ["Animale spaventoso", "Animale carino"],
-    ["Tradizionale", "Di nicchia"],
-    ["Luce", "Buio"],
-    ["Attore sottovalutato", "Attore sopravvalutato"],
-    ["Difficile da usare", "Facile da usare"],
-    ["Tired", "Wired"],
-    ["Anni '80", "Anni '90"],
-    ["Persona cattiva", "Persona buona"],
-    ["Sostentamento", "Alta cucina"],
-    ["Morbido", "Duro"],
-    ["Cosa normale da possedere", "Cosa strana da possedere"],
-    ["Straight", "Curvy"],
-    ["Comportamento modello", "Cattiva influenza"],
-    ["Maggiormente inutile", "Maggiormente utile"],
-    ["Persona cattiva", "Persona gentile"],
-    ["Film d'azione", "Film d'avventura"]
-  ],
-  "advanced": [
-    ["Corto", "Lungo"],
-    ["L'anno peggiore della storia", "L'anno migliore della storia"],
-    ["Famoso", "Famigerato"],
-    ["Dio meno potente", "Dio più potente"],
-    ["Colore poco sexy", "Colore sexy"],
-    ["Beneficio per te", "Beneficio per tutti"],
-    ["Cattivo presidente", "Buon presidente"],
-    ["Weird", "Strange"],
-    ["Derivato", "Originale"],
-    ["Etichetta", "Maniera"],
-    ["Il peggiore", "Il migliore"],
-    ["Numero piccolo", "Numero grande"],
-    ["Non abbastanza", "Troppo"],
-    ["Difficile sedersi", "Facile sedersi"],
-    ["Talento", "Abilità"],
-    ["L'era peggiore per i viaggi nel tempo", "L'era migliore per i viaggi nel tempo"],
-    ["Non abbracciabile", "Abbracciabile"],
-    ["Eterogeneo", "Omogeneo"],
-    ["Fuori controllo", "Sotto controllo"],
-    ["Popolare", "Elitario"],
-    ["Apartitico", "Partigiano"],
-    ["Nome del cane", "Nome del gatto"],
-    ["Fatto poco noto", "Fatto ben noto"],
-    ["Socialista", "Capitalista"],
-    ["Caramelle cattive", "Caramelle buone"],
-    ["Tradizionale", "Radicale"],
-    ["Cattiva sensazione in bocca", "Buona sensazione in bocca"],
-    ["Illegale", "Legale"],
-    ["Mai puntuale", "Sempre puntuale"],
-    ["Non vivrà 100 anni", "Vivrà 100 anni"],
-    ["Personaggio Disney cattivo", "Personaggio Disney buono"],
-    ["Simile", "Identico"],
-    ["Limp", "Firm"],
-    ["Argomento divertente", "Argomento serio"],
-    ["Non profumato", "Profumato"],
-    ["Orizzontale", "Verticale"],
-    ["Piccolo", "Piccolissimo"],
-    ["Parola brutta", "Parola bella"],
-    ["Tick", "Toc"],
-    ["Cattivo consiglio", "Buon consiglio"],
-    ["Illegale", "Vietato"],
-    ["Non arte", "Arte"],
-    ["Gossip", "Notizie"],
-    ["Piacere proibito", "In realtà solo brutto"],
-    ["Antico", "Avanguardia"],
-    ["Vero", "Falso"],
-    ["Saluto normale", "Saluto strano"],
-    ["Dittatura", "Democrazia"],
-    ["Impotente", "Potente"],
-    ["Fuma", "Non fuma"],
-    ["Persona noiosa", "Persona divertente"],
-    ["Libro sottovalutato", "Libro sopravvalutato"],
-    ["Pensiero profondo", "Pensiero superficiale"],
-    ["Cattiva scuola", "Buona scuola"],
-    ["Saggezza popolare", "Credenza marginale"],
-    ["Faccenda peggiore", "Faccenda migliore"],
-    ["Specie in via di estinzione", "Specie sovrappopolate"],
-    ["Blu", "Verde"],
-    ["Frutta", "Verdura"],
-    ["Scienza", "Pseudoscienza"],
-    ["Chiacchiere", "Argomento pesante"],
-    ["Cattivo investimento", "Buon investimento"],
-    ["Fisso", "Mobile"],
-    ["Problema locale", "Problema globale"],
-    ["Elettrizzante", "Terrificante"],
-    ["Nerd", "Atleta"],
-    ["Previsto", "Inaspettato"],
-    ["Persona che potresti picchiare", "Persona che ti picchierebbe"],
-    ["Limitato", "Infinito"],
-    ["Evento occasionale", "Evento formale"],
-    ["Fobia irragionevole", "Fobia ragionevole"],
-    ["Gioco sottovalutato", "Gioco sopravvalutato"],
-    ["Religioso", "Sacrilego"],
-    ["Delicato", "Piccante"],
-    ["Persona autentica", "Persona falsa"],
-    ["Innaturale", "Naturale"],
-    ["Segreto", "Di dominio pubblico"],
-    ["Troppo piccolo", "Troppo grande"],
-    ["Arte", "Commercio"],
-    ["Un colpo meraviglioso", "Icona pop"],
-    ["Pokémon poco sexy", "Pokémon sexy"],
-    ["Silenzioso", "Rumoroso"],
-    ["Incluso", "Esclusivo"],
-    ["Cane cattivo (razza)", "Cane buono (razza)"]
+              ["Gesloten", "Open"],
+              ["Dataminimalisatie", "Onbeperkte datahonger"],
+              ["Transparantie", "Misleiding"],
+              ["Gegevens zijn al gewist", "Bewaartermijn is onbeperkt"],
+              ["Vrijwillige, geïnformeerde toestemming", "Verplichte toestemming zonder keuze"],
+              ["Volledige inzage", "Gebruiker onbekend met gegevensgebruik"],
+              ["Geen doorgifte", "Delen van persoonsgegevens zonder grenzen"],
+              ["Doelbinding", "Willekeurige verwerking"],
+              ["Strenge eisen aan gegevensbeveiliging", "Afwezigheid van beveiligingsmaatregelen"],
+              ["Het recht om je onbespied te wanen", "Constante surveillance"],
+              ["Datalek gemeld en afgehandeld", "Verborgen datalek"],
+              ["Bijzondere categorieën van persoonsgegevens", "Normale persoonsgegevens"],
+              ["Bescherming tegen automatische besluitvorming", "Automatische besluitvorming zonder rechtenbescherming"],
+              ["Nooit profileren", "Onbeperkt profileren"],
+              ["Uitgebreide rechten voor betrokkenen", "Geen rechten voor betrokkenen"],
+              ["Opt-out", "Opt-in"],
+              ["Privé", "Openbaar"],
+              ["Onversleuteld", "Versleuteld"],
+              ["Geïdentificeerd", "Geanonimiseerd"],
+              ["Kwetsbaar", "Beveiligd"],
+              ["Beperkte toegang", "Toegankelijk"],
+              ["Ondoorzichtig beleid", "Helder beleid"],
+              ["Strijdig", "Compliant"],
+              ["Gegevenscorruptie", "Gegevensintegriteit"],
+              ["Ongeautoriseerde toegang", "Geautoriseerde toegang"],
+              ["In de Cloud Opgeslagen", "Lokaal Opgeslagen"],
+              ["Gegevensverwijdering", "Gegevensverzameling"],
+              ["Geen buzzword", "Buzzword"],
+              ["Gebruiksonvriendelijk", "Gebruiksvriendelijk"],
+              ["Verouderde Software", "Regelmatige Updates"],
+              ["Intellectueel eigendom", "Open Source"],
+              ["Enkelvoudige Authenticatie", "Twee-Factor Authenticatie"],
+              ["Individuele Gegevens", "Geaggregeerde Gegevens"],
+              ["Zelf gehost", "SaaS"],
+              ["Verantwoordelijkheid bij verwerkingsverantwoordelijke", "Verantwoordelijkheid bij individu"],
+              ["Stevige boetes bij AVG schendingen", "Geen sancties bij overtredingen"],
+              ["Recht op data portabiliteit", "Geen recht data portabiliteit"],
+              ["Extra bescherming van kindergegevens", "Onbeperkte verwerking van kindergegevens"],
+              ["Strenge profileringseisen", "Ongecontroleerde profilering"],
+              ["Gecontroleerde toegang en overdracht", "Vrije toegang door derden"],
+              ["Effectief toezicht", "Afwezigheid van een toezichthouder"],
+              ["Plicht tot risicobeoordeling (DPIA)", "Geen preventieve maatregelen"],
+              ["Verbod op misleidend verzamelen van gegevens", "Misleiding bij gegevensverzameling"],
+              ["Geen commercieel gebruik van persoonsgegevens", "Onbeperkte data-handel"],
+              ["Verantwoordelijkheden voor dataverwerkers", "Geen verantwoordelijkheid voor dataverwerkers"],
+              ["Afstemming van bedrijfspraktijken aan privacyregels", "Volledige bedrijfsvrijheid"],
+              ["Beperkte toegang tot eigen persoonsgegevens", "Volledige toegang tot eigen persoonsgegevens"],
+              ["Niet-gespecificeerde doeleinden", "Gespecificeerde doeleinden"],
+              ["Geen meldplicht bij datalek", "Verplichte melding van datalek"],
+              ["Verzamelen van excessieve persoonsgegevens", "Verzamelen van alleen noodzakelijke persoonsgegevens"],
+              ["Ontbreken van verantwoording door verwerkers", "Goede verantwoording door verwerkers"]
+              ["Risicobeheerste AI-implementatie", "Ongecontroleerde AI-uitrol"],
+              ["Transparante AI-systemen", "Black-box AI-systemen"],
+              ["AI met menselijke supervisie", "Autonome AI zonder human-in-the-loop"],
+              ["Discriminatievoorkomende AI", "Discriminerende AI"],
+              ["Beveiligde AI-systemen", "Onveilige AI-infrastructuren"],
+              ["Ethisch verantwoorde AI", "Onethisch gebruik van AI"],
+              ["Mensgerichte AI", "Technologisch deterministische AI"]
+            ],
+"advanced": [
+              ["AI met effectieve mens-machine samenwerking", "AI die menselijke inbreng limiteert"],
+              ["AI toegepast met respect voor mensenrechten", "AI toegepast met minachting voor mensenrechten"],
+              ["AI die duidelijke gebruiksgrenzen heeft", "AI met vage of onbestaande grenzen"],
+              ["Regulerende AI-wetgeving", "Deregulering of gebrek aan wetgeving voor AI"] 
   ]
 }
