Revert "name change locale theme"
This reverts commit 8657f9c843be0dc77e8feef7dbc9a21f068e6a30.

--- a/public/locales/thema-AVG&AI/spectrum-cards.json
+++ b/public/locales/thema-AVG&AI/spectrum-cards.json
@@ -57,7 +57,8 @@
               ["Discriminatievoorkomende AI", "Discriminerende AI"],
               ["Beveiligde AI-systemen", "Onveilige AI-infrastructuren"],
               ["Ethisch verantwoorde AI", "Onethisch gebruik van AI"],
-              ["Mensgerichte AI", "Technologisch deterministische AI"]
+              ["Mensgerichte AI", "Technologisch deterministische AI"],
+              
             ],
 "advanced": [
               ["AI met effectieve mens-machine samenwerking", "AI die menselijke inbreng limiteert"],
