Revert "Revert "fix overlow""
This reverts commit 3cb873f6beb39ec78576eb71bbfc8c2d1d76cac6.

--- a/public/locales/thema-AVG&AI/spectrum-cards.json
+++ b/public/locales/thema-AVG&AI/spectrum-cards.json
@@ -50,7 +50,7 @@
               ["Niet-gespecificeerde doeleinden", "Gespecificeerde doeleinden"],
               ["Geen meldplicht bij datalek", "Verplichte melding van datalek"],
               ["Verzamelen van excessieve persoonsgegevens", "Verzamelen van alleen noodzakelijke persoonsgegevens"],
-              ["Ontbreken van verantwoording door verwerkers", "Goede verantwoording door verwerkers"]
+              ["Ontbreken van verantwoording door verwerkers", "Goede verantwoording door verwerkers"],
               ["Risicobeheerste AI-implementatie", "Ongecontroleerde AI-uitrol"],
               ["Transparante AI-systemen", "Black-box AI-systemen"],
               ["AI met menselijke supervisie", "Autonome AI zonder human-in-the-loop"],
@@ -58,7 +58,6 @@
               ["Beveiligde AI-systemen", "Onveilige AI-infrastructuren"],
               ["Ethisch verantwoorde AI", "Onethisch gebruik van AI"],
               ["Mensgerichte AI", "Technologisch deterministische AI"],
-              
             ],
 "advanced": [
               ["AI met effectieve mens-machine samenwerking", "AI die menselijke inbreng limiteert"],
