check inline css ...

--- a/public/locales/thema-AVG&AI/spectrum-cards.json
+++ b/public/locales/thema-AVG&AI/spectrum-cards.json
@@ -5,7 +5,7 @@
               ["Transparantie", "Misleiding"],
               ["Gegevens zijn al gewist", "Bewaartermijn is onbeperkt"],
               ["Vrijwillige, geïnformeerde toestemming", "Verplichte toestemming zonder keuze"],
-              ["Recht op inzage", "Gebruiker onbekend met gegevensgebruik"],
+              ["Volledige inzage", "Gebruiker onbekend met gegevensgebruik"],
               ["Geen doorgifte", "Delen van persoonsgegevens zonder grenzen"],
               ["Doelbinding", "Willekeurige verwerking"],
               ["Strenge eisen aan gegevensbeveiliging", "Afwezigheid van beveiligingsmaatregelen"],
@@ -16,9 +16,8 @@
               ["Nooit profileren", "Onbeperkt profileren"],
               ["Uitgebreide rechten voor betrokkenen", "Geen rechten voor betrokkenen"],
               ["Opt-out", "Opt-in"],
-              ["Verantwoordelijkheid bij de verwerkingsverantwoordelijke", "Verantwoordelijkheid bij individu"],
+              ["Verantwoordelijkheid bij verwerkingsverantwoordelijke", "Verantwoordelijkheid bij individu"],
               ["Stevige boetes bij AVG schendingen", "Geen sancties bij overtredingen"],
-              ["Recht op data portabiliteit", "Geen data portabiliteit"],
               ["Extra bescherming van kindergegevens", "Onbeperkte verwerking van kindergegevens"],
               ["Strenge profileringseisen", "Ongecontroleerde profilering"],
               ["Gecontroleerde toegang en overdracht", "Vrije toegang door derden"],
@@ -29,11 +28,10 @@
               ["Verantwoordelijkheden voor dataverwerkers", "Geen verantwoordelijkheid voor dataverwerkers"],
               ["Afstemming van bedrijfspraktijken aan privacyregels", "Volledige bedrijfsvrijheid"],
               ["Beperkte toegang tot eigen persoonsgegevens", "Volledige toegang tot eigen persoonsgegevens"],
-              ["Gebruik van gegevens voor niet gespecificeerde doeleinden", "Gebruik van gegevens alleen voor gespecificeerde doeleinden"],
-              ["Geen meldplicht bij datalekken", "Verplichte melding van datalekken"],
-              ["Geautomatiseerde besluitvorming zonder bezwaar", "Recht op menselijke tussenkomst bij geautomatiseerde besluitvorming"],
+              ["Niet-gespecificeerde doeleinden", "Gespecificeerde doeleinden"],
+              ["Geen meldplicht bij datalek", "Verplichte melding van datalek"],
               ["Verzamelen van excessieve persoonsgegevens", "Verzamelen van alleen noodzakelijke persoonsgegevens"],
-              ["Ontbreken van verantwoording door data verwerkers", "Verantwoordingsplicht voor data verwerkers"] 
+              ["Ontbreken van verantwoording door verwerkers", "Goede verantwoording door verwerkers"]
             ],
 "advanced": [
               ["Risicobeheerste AI-implementatie", "Ongecontroleerde AI-uitrol"],
