--- a/public/locales/thema-AVG&AI/spectrum-cards.json
+++ b/public/locales/thema-AVG&AI/spectrum-cards.json
@@ -7,6 +7,24 @@
               ["Vrijwillige, geïnformeerde toestemming", "Verplichte toestemming zonder keuze"],
               ["Volledige inzage", "Gebruiker onbekend met gegevensgebruik"],
               ["Geen doorgifte", "Delen van persoonsgegevens zonder grenzen"],
+              ["Privé", "Openbaar"],
+              ["Onversleuteld", "Versleuteld"],
+              ["Geïdentificeerd", "Geanonimiseerd"],
+              ["Kwetsbaar", "Beveiligd"],
+              ["Beperkte toegang", "Toegankelijk"],
+              ["Ondoorzichtig beleid", "Helder beleid"],
+              ["Strijdig", "Compliant"],
+              ["Gegevenscorruptie", "Gegevensintegriteit"],
+              ["Ongeautoriseerde toegang", "Geautoriseerde toegang"],
+              ["In de Cloud Opgeslagen", "Lokaal Opgeslagen"],
+              ["Gegevensverwijdering", "Gegevensverzameling"],
+              ["Geen buzzword", "Buzzword"],
+              ["Gebruiksonvriendelijk", "Gebruiksvriendelijk"],
+              ["Verouderde Software", "Regelmatige Updates"],
+              ["Intellectueel eigendom", "Open Source"],
+              ["Enkelvoudige Authenticatie", "Twee-Factor Authenticatie"],
+              ["Individuele Gegevens", "Geaggregeerde Gegevens"],
+              ["Zelf gehost", "SaaS"],
               ["Doelbinding", "Willekeurige verwerking"],
               ["Strenge eisen aan gegevensbeveiliging", "Afwezigheid van beveiligingsmaatregelen"],
               ["Het recht om je onbespied te wanen", "Constante surveillance"],
