--- a/public/locales/thema-AVG&AI/spectrum-cards.json
+++ b/public/locales/thema-AVG&AI/spectrum-cards.json
@@ -11,7 +11,6 @@
               ["Onversleuteld", "Versleuteld"],
               ["Geïdentificeerd", "Geanonimiseerd"],
               ["Kwetsbaar", "Beveiligd"],
-              ["Beperkte toegang", "Toegankelijk"],
               ["Ondoorzichtig beleid", "Helder beleid"],
               ["Strijdig", "Compliant"],
               ["Gegevenscorruptie", "Gegevensintegriteit"],
@@ -45,7 +44,7 @@
               ["Geen commercieel gebruik van persoonsgegevens", "Onbeperkte data-handel"],
               ["Verantwoordelijkheden voor dataverwerkers", "Geen verantwoordelijkheid voor dataverwerkers"],
               ["Afstemming van bedrijfspraktijken aan privacyregels", "Volledige bedrijfsvrijheid"],
-              ["Beperkte toegang tot eigen persoonsgegevens", "Volledige toegang tot eigen persoonsgegevens"],
+              ["Geen toegang tot eigen persoonsgegevens", "Volledige toegang tot eigen persoonsgegevens"],
               ["Niet-gespecificeerde doeleinden", "Gespecificeerde doeleinden"],
               ["Geen meldplicht bij datalek", "Verplichte melding van datalek"],
               ["Verzamelen van excessieve persoonsgegevens", "Verzamelen van alleen noodzakelijke persoonsgegevens"],
