Update all borders to gray

--- a/public/locales/thema-AVG&AI/spectrum-cards.json
+++ b/public/locales/thema-AVG&AI/spectrum-cards.json
@@ -42,7 +42,7 @@
               ["Plicht tot risicobeoordeling (DPIA)", "Geen preventieve maatregelen"],
               ["Verbod op misleidend verzamelen van gegevens", "Misleiding bij gegevensverzameling"],
               ["Geen commercieel gebruik van persoonsgegevens", "Onbeperkte data-handel"],
-              ["Verantwoordelijkheden voor dataverwerkers", "Geen verantwoordelijkheid voor dataverwerkers"],
+              ["Verantwoordelijkheid van verwerker", "Geen verantwoordelijkheid van verwerker"],
               ["Afstemming van bedrijfspraktijken aan privacyregels", "Volledige bedrijfsvrijheid"],
               ["Geen toegang tot eigen persoonsgegevens", "Volledige toegang tot eigen persoonsgegevens"],
               ["Niet-gespecificeerde doeleinden", "Gespecificeerde doeleinden"],
